src/CF_Extract/objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_User_Office__c</fullName>
        <label>CF User Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BVA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>NCA</fullName>
                </value>
                <value>
                    <fullName>OALC</fullName>
                </value>
                <value>
                    <fullName>OAWP</fullName>
                </value>
                <value>
                    <fullName>OCLA</fullName>
                </value>
                <value>
                    <fullName>OEI</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OI&amp;T</fullName>
                    <label>OIT</label>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>OPIA</fullName>
                </value>
                <value>
                    <fullName>OSP</fullName>
                </value>
                <value>
                    <fullName>OSVA</fullName>
                </value>
                <value>
                    <fullName>VBA</fullName>
                </value>
                <value>
                    <fullName>VEO</fullName>
                </value>
                <value>
                    <fullName>VHA</fullName>
                </value>
                <value>
                    <fullName>GAL</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>OIT</fullName>
                    <isActive>false</isActive>
                    <label>Old OIT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Name__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Name</label>
        <type>Text</type>
    </fields>
</CustomObject>